# quantaTrader

./: CMakeLists.txt  README.md  build.sh
benchmark/: benchmark_engine.cpp  generate_orders.cpp  generate_orders.h
include/: order.h  order_book.h
include/event_handling/: event.h  event_handler.h
include/matching/: engine.h  level.h  order.h  order_book.h  price_level_order_book.h  price_level_orderbook.h  symbol.h
sample/: engine_sample.cpp  event_handler_sample.h
src/event_handling/: event.cpp
src/matching/: engine.cpp  level.cpp  order.cpp  price_level_order_book.cpp  symbol.cpp
